<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecc"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#333"
        android:paddingBottom="32dp"/>

    <Button
        android:id="@+id/btnServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modo1"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modo2" />
</LinearLayout>
