<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8E9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtClient"
        android:textSize="20sp"
        android:textColor="#33691E"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Url"
        android:inputType="textUri"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Buscar"
        android:layout_marginBottom="12dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#A5D6A7"
        android:layout_marginBottom="8dp" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF" />
</LinearLayout>
